Fix truncated content on topc because of fixed header

--- a/server/public/stylesheets/style.css
+++ b/server/public/stylesheets/style.css
@@ -1,5 +1,5 @@
 body {
-  padding-top: 15px;
+  padding-top: 60px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
